package factoryMethod

interface IPedido {
    fun processar(): String
}